/*
 * Copyright (c) 2021-present radien GmbH & its legal owners. All rights reserved.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * http://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package io.radien.security.openid.controller;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import io.radien.security.openid.service.PrivateService;

/**
 * @author Marco Weiland
 */
@RestController
@RequestMapping(path = "${api}")
public class PrivateController {

	private PrivateService privateService;

	@Autowired
	public PrivateController(PrivateService privateService) {
		this.privateService = privateService;
	}

	@GetMapping(path = "/private")
	public String checkJustAdminRole() {
		return privateService.privateService();
	}

}
