@startuml

title __CONTROLLER's Class Diagram__\n

  namespace io.radien.security.openid.controller {
    class io.radien.security.openid.controller.PrivateController {
        + PrivateController()
        + checkJustAdminRole()
    }
  }
  

  namespace io.radien.security.openid.controller {
    class io.radien.security.openid.controller.PublicController {
        + PublicController()
        + shared()
    }
  }
  

  namespace io.radien.security.openid.controller {
    class io.radien.security.openid.controller.TokenController {
        + create()
    }
  }
  

  io.radien.security.openid.controller.PrivateController o-- io.radien.security.openid.service.PrivateService : privateService
  io.radien.security.openid.controller.PublicController o-- io.radien.security.openid.service.PublicService : publicService


 

@enduml
